# clawbot

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  clawbot.yaml.example  pyproject.toml  pytest.ini
clawbot/: __init__.py
clawbot/agent/: __init__.py  config.py  context.py  loop.py  session.py
clawbot/channels/: __init__.py  base.py  manager.py
clawbot/cli/: __init__.py  app.py  init.py
clawbot/config/: __init__.py  loader.py  schema.py
clawbot/provider/: base.py  litellm.py  openai_compatible.py
clawbot/queue/: __init__.py  constants.py  queue.py
clawbot/skills/: __init__.py  discovery.py  models.py  store.py
clawbot/storage/: session.py
clawbot/tools/: __init__.py  base.py  filesystem.py  registry.py  shell.py  skill.py
clawbot/util/: __init__.py  utils.py
tests/: __init__.py  conftest.py  test_agent_loop.py  test_agent_loop_multiturn.py  test_base.py  test_config.py  test_context.py  test_filesystem.py  test_loader.py  test_openai_compatible.py  test_registry.py  test_session.py  test_shell.py  test_skills.py  test_utils.py
